[gd_scene load_steps=6 format=3 uid="uid://calyvx1pimmxa"]

[ext_resource type="Script" path="res://level_select.gd" id="1_upuaj"]

[sub_resource type="InputEventKey" id="InputEventKey_t4mve"]
device = -1
keycode = 49
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_x4kpl"]
events = [SubResource("InputEventKey_t4mve")]

[sub_resource type="InputEventKey" id="InputEventKey_7airh"]
device = -1
pressed = true
keycode = 52
unicode = 52

[sub_resource type="Shortcut" id="Shortcut_d1d4i"]
events = [SubResource("InputEventKey_7airh")]

[node name="level select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 2.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_upuaj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1157.0
offset_bottom = 652.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="level 1" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
shortcut = SubResource("Shortcut_x4kpl")
text = "LEVEL 1"

[node name="level 2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "LEVEL 2"

[node name="level 3" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "LEVEL 3"

[node name="level 4" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
shortcut = SubResource("Shortcut_d1d4i")
text = "LEVEL 4"

[node name="level 5" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "LEVEL  5"

[node name="main menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "MAIN MENU"

[connection signal="pressed" from="MarginContainer/VBoxContainer/level 1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/level 2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/level 3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/level 4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/level 5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/main menu" to="." method="_on_main_menu_pressed"]
