extends Control

func _on_main_menu_pressed():
	get_tree().change_scene_to_file("res://menu.tscn")



func _on_level_1_pressed():
	get_tree().change_scene_to_file("res://level1.tscn")


func _on_level_2_pressed():
	get_tree().change_scene_to_file("res://level_2.tscn")


func _on_level_3_pressed():
	get_tree().change_scene_to_file("res://level3.tscn")
	


func _on_level_4_pressed():
	get_tree().change_scene_to_file("res://level4.tscn")


func _on_level_5_pressed():
	get_tree().change_scene_to_file("res://level5.tscn")
